--- a/viewer/body-fit/index.html
+++ b/viewer/body-fit/index.html
@@ -16,12 +16,12 @@
 
         <label>
           SuitSpec JSON
-          <input id="suitspecPath" type="text" />
+          <input id="suitspecPath" type="text" value="examples/suitspec.sample.json" />
         </label>
 
         <label>
           Body Sim JSON
-          <input id="simPath" type="text" />
+          <input id="simPath" type="text" value="sessions/body-sim.json" />
         </label>
 
         <div class="row row4">
@@ -66,6 +66,6 @@
       </main>
     </div>
 
-    <script type="module" src="./viewer.js"></script>
+    <script type="module" src="./viewer.js?v=20260228b"></script>
   </body>
 </html>
