--- a/viewer/body-fit/index.html
+++ b/viewer/body-fit/index.html
@@ -32,9 +32,14 @@
         </div>
 
         <div class="row row2">
-          <button id="btnTexture">Textures: Off</button>
+          <button id="btnTexture">Textures: On</button>
           <button id="btnTheme">Theme: Bright</button>
         </div>
+
+        <label>
+          Mesh Relief
+          <input id="reliefSlider" type="range" min="0" max="0.1" step="0.01" value="0.05" />
+        </label>
 
         <div class="row row4">
           <button id="btnCamFront">Cam Front</button>
@@ -66,6 +71,6 @@
       </main>
     </div>
 
-    <script type="module" src="./viewer.js?v=20260228b"></script>
+    <script type="module" src="./viewer.js?v=20260301c"></script>
   </body>
 </html>
